styles/main.css
html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  color: #333;
  background-color: #fafafa;
  font-family: 'Open Sans', sans-serif;
}

a {
  color: #07a;
}

a:visited {
  color: #941352;
}

header {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  overflow: hidden;
}

nav {
  width: 100%;
  height: 55px;
  border-bottom: 4px solid #a2a2a2;

  display: flex;
  justify-content: center;
  align-items: center;

  background-color: #181818;
  color: #fafafa;
}

nav.fixed {
  position: fixed;
  top: 0px;
}

#nav-links {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  width: 100%;
  max-width: 400px;
  height: 100%;
}

nav a {
  text-decoration: none;
  color: inherit;
  transition: color 0.25s;
}

nav a:visited {
  color: #fefefe;
}

nav a.active {
  color: #ff9c00;
}

@media (hover: hover) {
  nav a:hover {
    color: #ff9c00;
  }
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 40px 10px;
}

section:nth-child(2n+1) {
  background-color: #efefef;
}

footer {
  display: flex;
  justify-content: center;
  align-items: center;

  height: 100px;
  border-top: 4px solid #a2a2a2;
  background-color: #212121;
}

footer a {
  text-decoration: none;
  margin: 0px 30px;
  border-radius: 4px;
  font-size: 36px;
  color: #fafafa;
  transition: all 0.25s;
}

footer a:visited {
  color: #fefefe;
}

footer a:hover {
  color: #ff9c00;
}

h1 {
  font-family: 'Roboto Slab', serif;
  text-align: center;
  color: #fafafa;
  font-size: 48pt;
  margin: 20px;
}

h2 {
  font-size: 20pt;
  text-align: center;
}

h2::after {
  content: '';
  display: block;
  width: 50px;
  border-bottom: 2px solid #333;
  margin: 10px auto;
}

#particles-js {
  position: absolute;
  background-color: #212121;
  top: 0px;
  bottom: 0px;
  left: -100px;
  right: -100px;
  z-index: -1;
}

#title-container {
  flex: 1;
}

#subtitle {
  color: white;
  font-style: italic;
  font-weight: 300;
  font-size: 14pt;
}

.about-content {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  max-width: 940px;
  width: 100%;
  padding: 40px 0px;
}

.about-content img {
  width: 250px;
  border-radius: 125px;
}

.about-text {
  flex: 1;
  margin: 0px 40px;
}

.flex-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 940px;
  width: 100%;
}

.section-description {
  width: 100%;
}

#facts {
  position: relative;
  height: 100px;
  width: 100%;
  margin-bottom: 22px;
  text-align: center;
  cursor: pointer;
  user-select: none;
  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
}

.fact {
  display: none;
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;
  transform: translateY(-50%);
}

.next-arrow {
  position: absolute;
  bottom: 0;
  right: 0;
  font-size: 12px;
  color: #ccc;
}

.spacer {
  width: 20px;
  height: 1px;
  border-bottom: 1px solid #a2a2a2;
  margin: 10px 0px;
}

.project-container {
  display: flex;
  width: 100%;
  padding: 40px 0px;
  border-top: none;
}

.project-container~.project-container {
  border-top: 1px solid #a2a2a2;
}

.project-preview {
  width: 480px;
  align-self: flex-start;
}

.project-details {
  display: flex;
  flex-direction: column;
  flex: 1 1 0;
  padding-left: 15px;
}

.project-title {
  font-size: 14pt;
  font-weight: bold;
  margin-bottom: 10px;
}

.project-subtitle {
  font-size: 10pt;
  font-weight: 400;
  color: #888;
  margin-bottom: 10px;
  margin-top: -8px;
}

.project-description {
  margin-bottom: 20px;
}

.project-description p:first-of-type {
  margin-top: 0px;
}

.project-gallery {
  display: none;
}

.pswp iframe {
  width: 100%;
  height: 100%;
  padding-top: 44px;
}

.pswp__ui--idle .pswp__top-bar {
  opacity: 1;
}

.project-details .outline-button-dark {
  margin-top: auto;
  align-self: center;
}

@media (max-width: 979px) {
  .about-content {
    flex-direction: column;
  }

  .flex-container {
    max-width: 800px;
  }

  .about-text {
    margin: 40px 0px 0px 0px;
  }

  .project-container {
    flex-direction: column;
  }

  .project-preview {
    width: 100%;
    height: auto;
  }

  .project-details {
    align-items: center;
    padding: 15px 0px 0px 0px;
    height: auto;
  }
}

.outline-button-dark {
  color: #212121;
  background-color: transparent;
  font-family: inherit;
  font-size: inherit;
  border: 2px solid #212121;
  line-height: 30px;
  padding: 0px 30px;
  cursor: pointer;
  transition: all 0.25s;
}

@media (hover: hover) {
  .outline-button-dark:hover {
    color: #fefefe;
    background-color: #212121;
  }
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 500px;
  width: 100%;
  padding-bottom: 20px;
}

input,
textarea {
  width: 100%;
  margin: 2px;
  padding: 5px;
  font-family: inherit;
  font-size: inherit;
}

textarea {
  resize: vertical;
  min-height: 150px;
}

.ajax-button {
  position: relative;
  margin-top: 15px;
  height: 34px;
  transition: all 0.3s ease;
}

.ajax-button.success {
  color: transparent;
}

.ajax-button.success::before {
  font-family: 'Font Awesome 5 Free';
  font-weight: 900;
  content: '\f00c';
  color: #333;
  position: absolute;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  transition: all 0.3s ease;
}

/* Inspired by https://codepen.io/sfaisal/pen/rVWBXp/ */
.ajax-button.loading {
  font-size: 0;
  width: 34px;
  height: 34px;
  border-radius: 17px;
  padding: 0;
  border: 3px solid #000;
  border-bottom: 3px solid rgba(255, 255, 255, 0.0);
  border-left: 3px solid rgba(255, 255, 255, 0.0);
  background-color: transparent !important;
  animation-name: rotateAnimation;
  -webkit-animation-name: wk-rotateAnimation;
  animation-duration: 1s;
  -webkit-animation-duration: 1s;
  animation-delay: 0.2s;
  -webkit-animation-delay: 0.2s;
  animation-iteration-count: infinite;
  -webkit-animation-iteration-count: infinite;
}

@keyframes rotateAnimation {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@-webkit-keyframes wk-rotateAnimation {
  0% {
    -webkit-transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
  }
}

